# WombatEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  res_example.txt
includes/buffer/vao/: vao.h
includes/buffer/vbo/: vbo.h
includes/controls/mouse/: mouse_handler.h
includes/input/key_tracker/: key_tracker.h
includes/input/mouse_tracker/: mouse_tracker.h
includes/rendering/: render_consts.h
includes/rendering/assimp/: mesh.h  model.h
includes/rendering/buffer/buffer/: buffer.h
includes/rendering/buffer/ebo/: ebo.h
includes/rendering/buffer/vbo/: vbo.h
includes/rendering/camera/: camera.h
includes/rendering/log/: check_gl.h
includes/rendering/shader/: shader.h
includes/rendering/texture/: texture.h  texture_manager.h
includes/rendering/vao/: vao.h
includes/rendering/vertex/: vertex.h
includes/root/components/: transform_component.h
includes/root/graphics/implementation/: buffer.h  ebo.h  material.h  mesh.h  mesh_node.h  model.h  shader.h  texture.h  vao.h  vbo.h  vertex.h
includes/root/graphics/interface/: camera.h  resource_manager.h
includes/root/input/: key_tracker.h  mouse_tracker.h
includes/root/utils/: text_reading.h
includes/root/utils/signal/: signal.h  signal_handler.h
includes/shader/: shader.h
includes/texture/: texture.h
includes/utils/delta_tracker/: delta_tracker.h
includes/utils/logging/: logging.h
includes/utils/signal/signal/: signal.h
includes/vert_data/: vert_data.h
shaders/: test_fragment.frag  test_fragment_light_source.frag  test_fragment_new.frag  test_fragment_no_texture.frag  test_phong.frag  test_phong.vert  test_vertex.vert  test_vertex_new.vert  test_vertex_no_texture.vert
src/: main.cpp  stb_instancer.cpp
src/buffer/ebo/: ebo.cpp
src/buffer/vao/: vao.cpp
src/buffer/vbo/: vbo.cpp
src/controls/mouse/: mouse_handler.cpp
src/input/key_tracker/: key_tracker.cpp
src/input/mouse_tracker/: mouse_tracker.cpp
src/rendering/assimp/: mesh.cpp  model.cpp
src/rendering/buffer/buffer/: buffer.cpp
src/rendering/buffer/ebo/: ebo.cpp
src/rendering/buffer/vbo/: vbo.cpp
src/rendering/camera/: camera.cpp
src/rendering/log/: check_gl.cpp
src/rendering/shader/: shader.cpp
src/rendering/texture/: texture.cpp  texture_manager.cpp
src/rendering/vao/: vao.cpp
src/root/components/: transform_component.cpp
src/root/graphics/implementation/: buffer.cpp  check_gl.cpp  ebo.cpp  material.cpp  mesh.cpp  mesh_node.cpp  model.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
src/root/graphics/interface/: camera.cpp  resource_manager.cpp
src/root/input/: key_tracker.cpp  mouse_tracker.cpp
src/root/utils/: delta_tracker.cpp  logging.cpp  text_reader.cpp
src/shader/: shader.cpp
src/texture/: texture.cpp
src/utils/delta_tracker/: delta_tracker.cpp
src/utils/logging/: logging.cpp
src/utils/text_reading/: text_reader.cpp
src/vao/: vao.cpp
text/: wombat_screen.txt
